--- a/src/style.css
+++ b/src/style.css
@@ -74,7 +74,7 @@ main {
   display: flex;
 }
 
-.icon {
+.app-icon {
   width: 75px;
   height: 75px;
   /* font-size: 40px; */
@@ -96,7 +96,7 @@ main {
 
 .weather-forecast {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   margin-top: 25px;
   color: #000;
   font-weight: 700;
@@ -106,17 +106,21 @@ main {
   font-size: 16px;
   text-align: center;
   opacity: 0.5;
+  margin-bottom: 15px;
+  line-height: 16px;
+}
+
+.forecast-icon {
+  width: 75px;
+  height: 75px;
+  display: block;
+  margin: 0 auto;
 }
 
 .forecast-temp {
   font-size: 14px;
   text-align: center;
-  margin-top: 5px;
-}
-
-.icon {
-  font-size: 35px;
-  text-align: center;
+  margin-top: 25px;
 }
 
 .min-temp {
